Frontend/analisador_sintatico/y.output
Estado 4 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | NIL
    4    | LPAREN RPAREN
    5    | INT
    6    | STRING
    7    | MINUS exp
    8    | func_call
    9    | arith_exp
   10    | cmp_exp
   11    | bool_exp
   12    | record_create
   13    | array_create
   14    | lvalue ASSIGN exp
   15    | cond_exp
   16    | loop_exp
   17    | BREAK
   18    | LET decs IN expseq END
   19    | LPAREN expseq RPAREN
   20    | switch_exp

   21 switch_exp: SWITCH lvalue LBRACE case_list RBRACE

   22 case_list: case
   23          | case_list case

   24 case: CASE INT COLON exp
   25     | DEFAULT COLON exp

   26 cond_exp: IF exp THEN exp ELSE exp
   27         | IF exp THEN exp

   28 loop_exp: WHILE exp DO exp
   29         | FOR ID ASSIGN exp TO exp DO exp

   30 lvalue: ID
   31       | ID LBRACK exp RBRACK
   32       | lvalue LBRACK exp RBRACK
   33       | lvalue DOT ID

   34 func_call: ID LPAREN explist RPAREN

   35 explist: %empty
   36        | explist_nonempty

   37 explist_nonempty: exp
   38                 | exp COMMA explist_nonempty

   39 arith_exp: exp PLUS exp
   40          | exp MINUS exp
   41          | exp TIMES exp
   42          | exp DIVIDE exp

   43 cmp_exp: exp EQ exp
   44        | exp NEQ exp
   45        | exp LT exp
   46        | exp LE exp
   47        | exp GT exp
   48        | exp GE exp

   49 bool_exp: exp AND exp
   50         | exp OR exp

   51 record_create: ID LBRACE record_create_list RBRACE

   52 record_create_list: %empty
   53                   | record_create_list_nonempty

   54 record_create_list_nonempty: record_create_field
   55                            | record_create_field COMMA record_create_list_nonempty

   56 record_create_field: ID EQ exp

   57 array_create: ID LBRACK exp RBRACK OF exp

   58 decs: %empty
   59     | dec decs

   60 dec: tydeclist
   61    | vardec
   62    | fundeclist

   63 tydeclist: tydec
   64          | tydec tydeclist

   65 tydec: TYPE ID EQ ty

   66 ty: ID
   67   | LBRACE tyfields RBRACE
   68   | ARRAY OF ID

   69 tyfields: %empty
   70         | tyfields_nonempty

   71 tyfields_nonempty: tyfield
   72                  | tyfield COMMA tyfields_nonempty

   73 tyfield: ID COLON ID

   74 vardec: VAR ID ASSIGN exp
   75       | VAR ID COLON ID ASSIGN exp

   76 fundeclist: fundec
   77           | fundec fundeclist

   78 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   79       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   80 expseq: %empty
   81       | exp
   82       | exp SEMICOLON expseq


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    LOW (258)
    UMINUS (259)
    ID <sval> (260) 29 30 31 33 34 51 56 57 65 66 68 73 74 75 78 79
    STRING <sval> (261) 6
    INT <ival> (262) 5 24
    COMMA (263) 38 55 72
    COLON (264) 24 25 73 75 79
    SEMICOLON (265) 82
    LPAREN (266) 4 19 34 78 79
    RPAREN (267) 4 19 34 78 79
    LBRACK (268) 31 32 57
    RBRACK (269) 31 32 57
    LBRACE (270) 21 51 67
    RBRACE (271) 21 51 67
    DOT (272) 33
    PLUS (273) 39
    MINUS (274) 7 40
    TIMES (275) 41
    DIVIDE (276) 42
    EQ (277) 43 56 65 78 79
    NEQ (278) 44
    LT (279) 45
    LE (280) 46
    GT (281) 47
    GE (282) 48
    AND (283) 49
    OR (284) 50
    ASSIGN (285) 14 29 74 75
    ARRAY (286) 68
    IF (287) 26 27
    THEN (288) 26 27
    ELSE (289) 26
    WHILE (290) 28
    FOR (291) 29
    TO (292) 29
    DO (293) 28 29
    LET (294) 18
    IN (295) 18
    END (296) 18
    OF (297) 57 68
    BREAK (298) 17
    NIL (299) 3
    FUNCTION (300) 78 79
    VAR (301) 74 75
    TYPE (302) 65
    SWITCH (303) 21
    CASE (304) 24
    DEFAULT (305) 25


Não terminais com as regras onde eles aparecem

    $accept (51)
        à esquerda: 0
    program <exp> (52)
        à esquerda: 1
        à direita: 0
    exp <exp> (53)
        à esquerda: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
        à direita: 1 7 14 24 25 26 27 28 29 31 32 37 38 39 40 41 42 43 44 45 46 47 48 49 50 56 57 74 75 78 79 81 82
    switch_exp <exp> (54)
        à esquerda: 21
        à direita: 20
    case_list <exp> (55)
        à esquerda: 22 23
        à direita: 21 23
    case <exp> (56)
        à esquerda: 24 25
        à direita: 22 23
    cond_exp <exp> (57)
        à esquerda: 26 27
        à direita: 15
    loop_exp <exp> (58)
        à esquerda: 28 29
        à direita: 16
    lvalue <var> (59)
        à esquerda: 30 31 32 33
        à direita: 2 14 21 32 33
    func_call <exp> (60)
        à esquerda: 34
        à direita: 8
    explist <explist> (61)
        à esquerda: 35 36
        à direita: 34
    explist_nonempty <explist> (62)
        à esquerda: 37 38
        à direita: 36 38
    arith_exp <exp> (63)
        à esquerda: 39 40 41 42
        à direita: 9
    cmp_exp <exp> (64)
        à esquerda: 43 44 45 46 47 48
        à direita: 10
    bool_exp <exp> (65)
        à esquerda: 49 50
        à direita: 11
    record_create <exp> (66)
        à esquerda: 51
        à direita: 12
    record_create_list <efieldlist> (67)
        à esquerda: 52 53
        à direita: 51
    record_create_list_nonempty <efieldlist> (68)
        à esquerda: 54 55
        à direita: 53 55
    record_create_field <efield> (69)
        à esquerda: 56
        à direita: 54 55
    array_create <exp> (70)
        à esquerda: 57
        à direita: 13
    decs <declist> (71)
        à esquerda: 58 59
        à direita: 18 59
    dec <dec> (72)
        à esquerda: 60 61 62
        à direita: 59
    tydeclist <dec> (73)
        à esquerda: 63 64
        à direita: 60 64
    tydec <namety> (74)
        à esquerda: 65
        à direita: 63 64
    ty <ty> (75)
        à esquerda: 66 67 68
        à direita: 65
    tyfields <fieldlist> (76)
        à esquerda: 69 70
        à direita: 67 78 79
    tyfields_nonempty <fieldlist> (77)
        à esquerda: 71 72
        à direita: 70 72
    tyfield <field> (78)
        à esquerda: 73
        à direita: 71 72
    vardec <dec> (79)
        à esquerda: 74 75
        à direita: 61
    fundeclist <dec> (80)
        à esquerda: 76 77
        à direita: 62 77
    fundec <fundec> (81)
        à esquerda: 78 79
        à direita: 76 77
    expseq <explist> (82)
        à esquerda: 80 81 82
        à direita: 18 19 82


Estado 0

    0 $accept: • program $end

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    program        ir ao estado 13
    exp            ir ao estado 14
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 1

   30 lvalue: ID •
   31       | ID • LBRACK exp RBRACK
   34 func_call: ID • LPAREN explist RPAREN
   51 record_create: ID • LBRACE record_create_list RBRACE
   57 array_create: ID • LBRACK exp RBRACK OF exp

    LPAREN  deslocar, e ir ao estado 25
    LBRACK  deslocar, e ir ao estado 26
    LBRACE  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 30 (lvalue)


Estado 2

    6 exp: STRING •

    $padrão  reduzir usando a regra 6 (exp)


Estado 3

    5 exp: INT •

    $padrão  reduzir usando a regra 5 (exp)


Estado 4

    4 exp: LPAREN • RPAREN
   19    | LPAREN • expseq RPAREN

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    RPAREN  deslocar, e ir ao estado 28
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    RPAREN  [reduzir usando a regra 80 (expseq)]

    exp            ir ao estado 29
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24
    expseq         ir ao estado 30


Estado 5

    7 exp: MINUS • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 31
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 6

   26 cond_exp: IF • exp THEN exp ELSE exp
   27         | IF • exp THEN exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 32
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 7

   28 loop_exp: WHILE • exp DO exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 33
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 8

   29 loop_exp: FOR • ID ASSIGN exp TO exp DO exp

    ID  deslocar, e ir ao estado 34


Estado 9

   18 exp: LET • decs IN expseq END

    FUNCTION  deslocar, e ir ao estado 35
    VAR       deslocar, e ir ao estado 36
    TYPE      deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 58 (decs)

    decs        ir ao estado 38
    dec         ir ao estado 39
    tydeclist   ir ao estado 40
    tydec       ir ao estado 41
    vardec      ir ao estado 42
    fundeclist  ir ao estado 43
    fundec      ir ao estado 44


Estado 10

   17 exp: BREAK •

    $padrão  reduzir usando a regra 17 (exp)


Estado 11

    3 exp: NIL •

    $padrão  reduzir usando a regra 3 (exp)


Estado 12

   21 switch_exp: SWITCH • lvalue LBRACE case_list RBRACE

    ID  deslocar, e ir ao estado 45

    lvalue  ir ao estado 46


Estado 13

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 47


Estado 14

    1 program: exp •
   39 arith_exp: exp • PLUS exp
   40          | exp • MINUS exp
   41          | exp • TIMES exp
   42          | exp • DIVIDE exp
   43 cmp_exp: exp • EQ exp
   44        | exp • NEQ exp
   45        | exp • LT exp
   46        | exp • LE exp
   47        | exp • GT exp
   48        | exp • GE exp
   49 bool_exp: exp • AND exp
   50         | exp • OR exp

    PLUS    deslocar, e ir ao estado 48
    MINUS   deslocar, e ir ao estado 49
    TIMES   deslocar, e ir ao estado 50
    DIVIDE  deslocar, e ir ao estado 51
    EQ      deslocar, e ir ao estado 52
    NEQ     deslocar, e ir ao estado 53
    LT      deslocar, e ir ao estado 54
    LE      deslocar, e ir ao estado 55
    GT      deslocar, e ir ao estado 56
    GE      deslocar, e ir ao estado 57
    AND     deslocar, e ir ao estado 58
    OR      deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 1 (program)


Estado 15

   20 exp: switch_exp •

    $padrão  reduzir usando a regra 20 (exp)


Estado 16

   15 exp: cond_exp •

    $padrão  reduzir usando a regra 15 (exp)


Estado 17

   16 exp: loop_exp •

    $padrão  reduzir usando a regra 16 (exp)


Estado 18

    2 exp: lvalue •
   14    | lvalue • ASSIGN exp
   32 lvalue: lvalue • LBRACK exp RBRACK
   33       | lvalue • DOT ID

    LBRACK  deslocar, e ir ao estado 60
    DOT     deslocar, e ir ao estado 61
    ASSIGN  deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 2 (exp)


Estado 19

    8 exp: func_call •

    $padrão  reduzir usando a regra 8 (exp)


Estado 20

    9 exp: arith_exp •

    $padrão  reduzir usando a regra 9 (exp)


Estado 21

   10 exp: cmp_exp •

    $padrão  reduzir usando a regra 10 (exp)


Estado 22

   11 exp: bool_exp •

    $padrão  reduzir usando a regra 11 (exp)


Estado 23

   12 exp: record_create •

    $padrão  reduzir usando a regra 12 (exp)


Estado 24

   13 exp: array_create •

    $padrão  reduzir usando a regra 13 (exp)


Estado 25

   34 func_call: ID LPAREN • explist RPAREN

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 35 (explist)

    exp               ir ao estado 63
    switch_exp        ir ao estado 15
    cond_exp          ir ao estado 16
    loop_exp          ir ao estado 17
    lvalue            ir ao estado 18
    func_call         ir ao estado 19
    explist           ir ao estado 64
    explist_nonempty  ir ao estado 65
    arith_exp         ir ao estado 20
    cmp_exp           ir ao estado 21
    bool_exp          ir ao estado 22
    record_create     ir ao estado 23
    array_create      ir ao estado 24


Estado 26

   31 lvalue: ID LBRACK • exp RBRACK
   57 array_create: ID LBRACK • exp RBRACK OF exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 66
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 27

   51 record_create: ID LBRACE • record_create_list RBRACE

    ID  deslocar, e ir ao estado 67

    $padrão  reduzir usando a regra 52 (record_create_list)

    record_create_list           ir ao estado 68
    record_create_list_nonempty  ir ao estado 69
    record_create_field          ir ao estado 70


Estado 28

    4 exp: LPAREN RPAREN •

    $padrão  reduzir usando a regra 4 (exp)


Estado 29

   39 arith_exp: exp • PLUS exp
   40          | exp • MINUS exp
   41          | exp • TIMES exp
   42          | exp • DIVIDE exp
   43 cmp_exp: exp • EQ exp
   44        | exp • NEQ exp
   45        | exp • LT exp
   46        | exp • LE exp
   47        | exp • GT exp
   48        | exp • GE exp
   49 bool_exp: exp • AND exp
   50         | exp • OR exp
   81 expseq: exp •
   82       | exp • SEMICOLON expseq

    SEMICOLON  deslocar, e ir ao estado 71
    PLUS       deslocar, e ir ao estado 48
    MINUS      deslocar, e ir ao estado 49
    TIMES      deslocar, e ir ao estado 50
    DIVIDE     deslocar, e ir ao estado 51
    EQ         deslocar, e ir ao estado 52
    NEQ        deslocar, e ir ao estado 53
    LT         deslocar, e ir ao estado 54
    LE         deslocar, e ir ao estado 55
    GT         deslocar, e ir ao estado 56
    GE         deslocar, e ir ao estado 57
    AND        deslocar, e ir ao estado 58
    OR         deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 81 (expseq)


Estado 30

   19 exp: LPAREN expseq • RPAREN

    RPAREN  deslocar, e ir ao estado 72


Estado 31

    7 exp: MINUS exp •
   39 arith_exp: exp • PLUS exp
   40          | exp • MINUS exp
   41          | exp • TIMES exp
   42          | exp • DIVIDE exp
   43 cmp_exp: exp • EQ exp
   44        | exp • NEQ exp
   45        | exp • LT exp
   46        | exp • LE exp
   47        | exp • GT exp
   48        | exp • GE exp
   49 bool_exp: exp • AND exp
   50         | exp • OR exp

    $padrão  reduzir usando a regra 7 (exp)


Estado 32

   26 cond_exp: IF exp • THEN exp ELSE exp
   27         | IF exp • THEN exp
   39 arith_exp: exp • PLUS exp
   40          | exp • MINUS exp
   41          | exp • TIMES exp
   42          | exp • DIVIDE exp
   43 cmp_exp: exp • EQ exp
   44        | exp • NEQ exp
   45        | exp • LT exp
   46        | exp • LE exp
   47        | exp • GT exp
   48        | exp • GE exp
   49 bool_exp: exp • AND exp
   50         | exp • OR exp

    PLUS    deslocar, e ir ao estado 48
    MINUS   deslocar, e ir ao estado 49
    TIMES   deslocar, e ir ao estado 50
    DIVIDE  deslocar, e ir ao estado 51
    EQ      deslocar, e ir ao estado 52
    NEQ     deslocar, e ir ao estado 53
    LT      deslocar, e ir ao estado 54
    LE      deslocar, e ir ao estado 55
    GT      deslocar, e ir ao estado 56
    GE      deslocar, e ir ao estado 57
    AND     deslocar, e ir ao estado 58
    OR      deslocar, e ir ao estado 59
    THEN    deslocar, e ir ao estado 73


Estado 33

   28 loop_exp: WHILE exp • DO exp
   39 arith_exp: exp • PLUS exp
   40          | exp • MINUS exp
   41          | exp • TIMES exp
   42          | exp • DIVIDE exp
   43 cmp_exp: exp • EQ exp
   44        | exp • NEQ exp
   45        | exp • LT exp
   46        | exp • LE exp
   47        | exp • GT exp
   48        | exp • GE exp
   49 bool_exp: exp • AND exp
   50         | exp • OR exp

    PLUS    deslocar, e ir ao estado 48
    MINUS   deslocar, e ir ao estado 49
    TIMES   deslocar, e ir ao estado 50
    DIVIDE  deslocar, e ir ao estado 51
    EQ      deslocar, e ir ao estado 52
    NEQ     deslocar, e ir ao estado 53
    LT      deslocar, e ir ao estado 54
    LE      deslocar, e ir ao estado 55
    GT      deslocar, e ir ao estado 56
    GE      deslocar, e ir ao estado 57
    AND     deslocar, e ir ao estado 58
    OR      deslocar, e ir ao estado 59
    DO      deslocar, e ir ao estado 74


Estado 34

   29 loop_exp: FOR ID • ASSIGN exp TO exp DO exp

    ASSIGN  deslocar, e ir ao estado 75


Estado 35

   78 fundec: FUNCTION • ID LPAREN tyfields RPAREN EQ exp
   79       | FUNCTION • ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  deslocar, e ir ao estado 76


Estado 36

   74 vardec: VAR • ID ASSIGN exp
   75       | VAR • ID COLON ID ASSIGN exp

    ID  deslocar, e ir ao estado 77


Estado 37

   65 tydec: TYPE • ID EQ ty

    ID  deslocar, e ir ao estado 78


Estado 38

   18 exp: LET decs • IN expseq END

    IN  deslocar, e ir ao estado 79


Estado 39

   59 decs: dec • decs

    FUNCTION  deslocar, e ir ao estado 35
    VAR       deslocar, e ir ao estado 36
    TYPE      deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 58 (decs)

    decs        ir ao estado 80
    dec         ir ao estado 39
    tydeclist   ir ao estado 40
    tydec       ir ao estado 41
    vardec      ir ao estado 42
    fundeclist  ir ao estado 43
    fundec      ir ao estado 44


Estado 40

   60 dec: tydeclist •

    $padrão  reduzir usando a regra 60 (dec)


Estado 41

   63 tydeclist: tydec •
   64          | tydec • tydeclist

    TYPE  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 63 (tydeclist)

    tydeclist  ir ao estado 81
    tydec      ir ao estado 41


Estado 42

   61 dec: vardec •

    $padrão  reduzir usando a regra 61 (dec)


Estado 43

   62 dec: fundeclist •

    $padrão  reduzir usando a regra 62 (dec)


Estado 44

   76 fundeclist: fundec •
   77           | fundec • fundeclist

    FUNCTION  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 76 (fundeclist)

    fundeclist  ir ao estado 82
    fundec      ir ao estado 44


Estado 45

   30 lvalue: ID •
   31       | ID • LBRACK exp RBRACK

    LBRACK  deslocar, e ir ao estado 83

    $padrão  reduzir usando a regra 30 (lvalue)


Estado 46

   21 switch_exp: SWITCH lvalue • LBRACE case_list RBRACE
   32 lvalue: lvalue • LBRACK exp RBRACK
   33       | lvalue • DOT ID

    LBRACK  deslocar, e ir ao estado 60
    LBRACE  deslocar, e ir ao estado 84
    DOT     deslocar, e ir ao estado 61


Estado 47

    0 $accept: program $end •

    $padrão  aceitar


Estado 48

   39 arith_exp: exp PLUS • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 85
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 49

   40 arith_exp: exp MINUS • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 86
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 50

   41 arith_exp: exp TIMES • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 87
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 51

   42 arith_exp: exp DIVIDE • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 88
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 52

   43 cmp_exp: exp EQ • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 89
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 53

   44 cmp_exp: exp NEQ • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 90
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 54

   45 cmp_exp: exp LT • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 91
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 55

   46 cmp_exp: exp LE • exp

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    exp            ir ao estado 92
    switch_exp     ir ao estado 15
    cond_exp       ir ao estado 16
    loop_exp       ir ao estado 17
    lvalue         ir ao estado 18
    func_call      ir ao estado 19
    arith_exp      ir ao estado 20
    cmp_exp        ir ao estado 21
    bool_exp       ir ao estado 22
    record_create  ir ao estado 23
    array_create   ir ao estado 24


Estado 56

   47 cmp_exp: exp GT • exp
